correcion de rutas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style/bootstrap.css">
+    <link rel="stylesheet" href="../style/bootstrap.css">
     <link rel="stylesheet" href="../style/style.css">
 
 </head>
@@ -32,7 +32,7 @@
                   <a class="nav-link coli" href="./productos.html">PRODUCTOS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link coli" href="/pages/quienes.html">QUIENES SOMOS?</a>
+                  <a class="nav-link coli" href="./pages/quienes.html">QUIENES SOMOS?</a>
                 </li>
               </ul>
             </div>
