--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VIRTUAL PINBALL ARGENTINO</title>
-    <link rel="stylesheet" href="/style/bootstrap.css">
+    <link rel="stylesheet" href="../style/bootstrap.css">
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link coli" aria-current="page" href="/pages/contacto.html">CONTACTO</a>
+                  <a class="nav-link coli" aria-current="page" href="./contacto.html">CONTACTO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link coli" href="/pages/novedades.html">NOVEDADES</a>
+                  <a class="nav-link coli" href="./novedades.html">NOVEDADES</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link coli" href="./productos.html">PRODUCTOS</a>
@@ -84,7 +84,7 @@
       </footer>
 
 
-      <script src="/js/bootstrap.bundle.js"></script>
+      <script src="../js/bootstrap.bundle.js"></script>
 </body>
 
 
