incorporacion de SCSS

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/bootstrap.css">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>PINBALL VIRTUAL ARGENTINO</title>
+
 </head>
 
 
@@ -141,7 +142,7 @@
 
 <footer>
 
-  <h2 class="culo">virtual pinball argentino</h2>
+  <h2>virtual pinball argentino</h2>
 
   <div class="social">
 
